# fsnd-coffeeshop

./: README.md
backend/: .gitignore  README.md  pyproject.toml
backend/src/: api.py
backend/src/auth/: auth.py
frontend/: README.md  package-lock.json  package.json
frontend/src/environments/: environment.ts
